# starter

./: README.md  pyproject.toml
docs/: _toc.yml  backtest.md  conclusion.md  data.md  intro.md  optimization.md
docs/_build/.doctrees/: backtest.doctree  conclusion.doctree  data.doctree  environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree  optimization.doctree
docs/_build/.doctrees/notebooks/: analysis.doctree
docs/_build/html/: .buildinfo  backtest.html  conclusion.html  data.html  genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  optimization.html  search.html  searchindex.js
docs/_build/html/_sources/: intro.md
docs/_build/html/_sources/notebooks/: analysis.ipynb  black_litterman.ipynb  factor_model.ipynb
docs/_build/html/notebooks/: analysis.html
docs/_build/jupyter_execute/: markdown-notebooks.ipynb  notebooks.ipynb
docs/_build/jupyter_execute/notebooks/: analysis.ipynb
notebooks/: analysis.ipynb  black_litterman_factor_model.ipynb  empirical_estimation.ipynb  max_sharpe.ipynb
portfolio_analysis/: backtester.py  data_loader.py  optimizer.py  visualizer.py
