[project]
name = "quant-portfolio-project"
version = "0.1.0"
description = ""
authors = [
    {name = "yihanche",email = "yihanche@andrew.cmu.edu"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "skfolio (>=0.8.1,<0.9.0)",
    "holoviews (>=1.20.2,<2.0.0)",
    "bokeh (>=3.7.2,<4.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "yfinance (>=0.2.55,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
jupyter-book = "^1.0.4.post1"
jupyter = "^1.1.1"

